--- a/src/ajs-sp-addInWeb/Views/Home/Index.cshtml
+++ b/src/ajs-sp-addInWeb/Views/Home/Index.cshtml
@@ -8,19 +8,7 @@
     <p><a href="http://dev.office.com" class="btn btn-primary btn-large">Learn more &raquo;</a></p>
 </div>
 <div class="row">
-    <div class="col-md-4">
-        <h2>Overview</h2>
-        <p>SharePoint introduces a Cloud Add-in Model that enables you to create add-ins. Learn what SharePoint Add-ins are, why you should build them, and the concepts that are fundamental to building them for SharePoint.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=294439">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Samples</h2>
-        <p>Download SharePoint Add-ins code samples. New samples are added frequently in JavaScript, C#, and VB.NET.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=294440">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Developer training</h2>
-        <p>Learn about SharePoint Add-ins with this interactive course offering developer-focused how to training and walkthrough videos.</p>
-        <p><a class="btn btn-default" href="http://go.microsoft.com/fwlink/?LinkID=294441">Learn more &raquo;</a></p>
-    </div>
+    <peoplepicker-demo>
+        Loading...
+    </peoplepicker-demo>
 </div>
