--- a/src/ajs-sp-addInWeb/Content/Site.css
+++ b/src/ajs-sp-addInWeb/Content/Site.css
@@ -1,12 +1,71 @@
-﻿body {
-    padding-top: 50px;
-    padding-bottom: 20px;
+﻿/*Containers*/ /*Containers*/ /*Containers*/ /*Containers*/ /*Containers*/ /*Containers*/ /*Containers*/ /*Containers*/
+body {
+    padding-bottom: 40px;
+    font-size: 12px;
 }
 
-/* Set padding to keep content from hitting the edges */
-.body-content {
-    padding-left: 15px;
-    padding-right: 15px;
+body, input[text], button {
+    color: #888;
+    font-family: Cambria, Georgia;
+}
+
+.container-fluid {
+    clear: both;
+    float: left;
+    width: 100%;
+}
+
+.containerlayout {
+    width: 100%;
+    height: 100%;
+    /*display:block;*/
+    overflow: scroll;
+    overflow-x: hidden;
+    position: absolute;
+}
+
+.layoutheader {
+    padding: 10px;
+    clear: both;
+}
+
+.indexcontainer {
+    padding-right: 20px;
+    padding-left: 20px;
+    clear: both;
+}
+
+.margingral {
+    margin: 10px 10px 10px 10px;
+}
+
+.table {
+    margin: 0px;
+}
+
+.row-eq-height {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    padding: 10px;
+}
+
+/*Containers*/ /*Containers*/ /*Containers*/ /*Containers*/ /*Containers*/ /*Containers*/ /*Containers*/ /*Containers*/
+
+h1 {
+    font-size: 1.2em;
+    color: #999;
+    margin-bottom: 0;
+}
+
+h2 {
+    font-size: 2em;
+    margin-top: 0;
+    padding-top: 0;
+    color: #444;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: lighter;
 }
 
 /* Override the default bootstrap behavior where horizontal description lists 
