--- a/src/ajs-sp-addInWeb/Views/Shared/_Layout.cshtml
+++ b/src/ajs-sp-addInWeb/Views/Shared/_Layout.cshtml
@@ -5,9 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewBag.Title</title>
     <base href="/" />
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/content/site.css" />
-    <link rel="stylesheet" href="~/Content/corev15.css" />
+    @Styles.Render("~/Content/css")
     <script src="https://npmcdn.com/core-js/client/shim.min.js"></script>
     <script src="https://npmcdn.com/zone.js@0.6.12?main=browser"></script>
     <script src="https://npmcdn.com/reflect-metadata@0.1.3"></script>
@@ -18,9 +16,27 @@
         System.import('app').then(null, console.error.bind(console));
     </script>
 </head>
-<body style="padding:25px;">
-    <div>
-        @RenderBody()
+<body style="display:none;">
+    <div class="container-fluid">
+        <div class="containerlayout">
+            <div id="divSPChrome"></div>
+            <div class="heading container-fluid">
+                <div class="row">header goes here</div>
+            </div>
+            <div class="layoutheader">
+                <h4 class="text-right">@DateTime.Now</h4>
+                <h4 class="text-right">Hello <span id="userDisplayName"></span></h4>
+            </div>
+            @RenderBody()
+            <footer class="row">
+                <div class="fixed">
+                    <hr />
+                    <div class="row">
+                        <p class="text-center">&copy; @DateTime.Now.Year - People Picker Demoware</p>
+                    </div>
+                </div>
+            </footer>
+        </div>
     </div>
     @RenderSection("scripts", required: false)
     @Scripts.Render("~/bundles/jquery")
